The text window is now no longer rezisable
The first commit was an attempt to make the entire grade window increase in size following the text window, this however caused some issues with the feedback table causing it to get too wide.

--- a/Shared/css/dugga.css
+++ b/Shared/css/dugga.css
@@ -36,10 +36,12 @@ h4{font-family: Calibri,sans-serif;font-size:1.2em; color: #000;}
 #toggleGrade {
 	display: none;
 	background:#bbb;
+	width: 20%;
 	left: 40%; 
 	top:  20%;
 	border: 2px solid var(--color-border);
 }
+
 #gradeBtn {
 	background-color:var(--color-accent);
 	border: none;
